# voicekb

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  TODO.md  pyproject.toml
client/: index.html  node_modules  pack.config.json  package-lock.json  package.json  postbuild.sh  vite.config.js
client/src/: App.vue  manifest.json  pages.json
client/src/api/: index.js
client/src/components/: TabBar.vue
client/src/pages/about/: index.vue
client/src/pages/chat/: index.vue
client/src/pages/profile/: index.vue
client/src/pages/prompts/: edit.vue  index.vue
client/src/pages/recordings/: detail.vue  index.vue
client/src/pages/speakers/: index.vue
client/src/pages/vocabulary/: index.vue
client/src/static/styles/: app.css  common.scss
client/src/utils/: format.js
docs/plans/: 2026-03-21-voicekb-design.md  2026-03-22-voicekb-implementation.md
scripts/: build-android.sh  deploy-services.sh  generate_demo_audio.py  start.sh
src/voicekb/: __init__.py  config.py  models.py
src/voicekb/api/: __init__.py  app.py
src/voicekb/knowledge/: __init__.py  agent.py  llm.py  rag.py  search.py  store.py
src/voicekb/process/: __init__.py  asr.py  diarize.py  pipeline.py  speaker_db.py
src/voicekb/web/: index.html
tests/: test_e2e.py
