[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "voicekb"
version = "0.1.0"
description = "Turn voice recordings into a searchable, AI-queryable personal knowledge base"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0",
    "resemblyzer>=0.1",
    "scikit-learn>=1.5",
    "scipy>=1.12",
    "chromadb>=1.0",
    "sentence-transformers>=4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.28",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "aiofiles>=24.0",
    "websockets>=13.0",
    "httpx>=0.27",
    "pydantic-ai>=1.70",
    "haloant-kit",
]

[tool.setuptools.packages.find]
where = ["src"]
